Testprogrammas/.metadata/.plugins/org.eclipse.cdt.ui/testStm32F4.build.log
10:24:22 **** Incremental Build of configuration Debug for project testStm32F4 ****
make all 
Building file: ../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DTRACE -DSTM32F411xE -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4xx" -I"../system/include/cmsis/device" -std=gnu11 -MMD -MP -MF"system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.d" -MT"system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.o" -c -o "system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.o" "../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c"
../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c: In function 'HAL_InitTick':
../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c:81:24: error: 'TIM6_DAC_IRQn' undeclared (first use in this function)
   HAL_NVIC_SetPriority(TIM6_DAC_IRQn, TickPriority ,0U);
                        ^
../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c:81:24: note: each undeclared identifier is reported only once for each function it appears in
../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c:87:3: warning: implicit declaration of function '__HAL_RCC_TIM6_CLK_ENABLE' [-Wimplicit-function-declaration]
   __HAL_RCC_TIM6_CLK_ENABLE();
   ^
../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c:109:24: error: 'TIM6' undeclared (first use in this function)
   TimHandle.Instance = TIM6;
                        ^
../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c: In function 'HAL_TIM_PeriodElapsedCallback':
../system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.c:163:55: warning: unused parameter 'htim' [-Wunused-parameter]
 void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim)
                                                       ^
make: *** [system/src/stm32f4xx/stm32f4xx_hal_timebase_tim_template.o] Error 1

10:24:22 Build Finished (took 386ms)

